--- a/src/top-bar/Top-bar.css
+++ b/src/top-bar/Top-bar.css
@@ -13,22 +13,6 @@
     transition: height 150ms ease-out;
 }
 
-
-.Top-bar__drop-down-wrapper {
-    position: fixed;
-    top: 50px;
-    bottom: 0;
-    left: 0;
-    z-index: -10;
-    opacity: 0;
-    transition: opacity 150ms linear;
-}
-
-.Top-bar.active .Top-bar__drop-down-wrapper {
-    z-index: 10;
-    opacity: 1;
-}
-
 .Top-bar__fixed-container button:last-of-type {
     display: none;
 }
